# QweakG4DD

./: .gitignore  CMakeLists.txt  CMakeLists_default.txt  CMakeLists_farm.txt  CMakeLists_farm2.txt  Doxyfile  DrawMSAn.cc  GNUmakefile  GetQweakSimVersion.cmake  Makefile  QweakAna.cc  QweakAnaCalc.cc  QweakAnaPEs.cc  QweakAnaPEsWgt.cc  QweakCalcPMTDD.cc  QweakGetPEs.cc  QweakPowerAna.cc  QweakSimG4.cc  QweakSimRoot.cc  QweakTreeBarHits.cc  QweakTreeStrip.cc  README.md  averageModel.cc  effectiveModel.cc  env_jlabcue  g4jsub.pl  gui.mac  myQweakCerenkovOnly.mac  myQweakConfiguration.mac  myQweakConfiguration_Mag45.mac  myQweakConfiguration_Mag90.mac  myRun_Al.mac  positionModel.cc  runAvgModel.sh
Documentation/: COMPILING  Makefile.ps  MyEnscript  QweakSimCerenkovDetector.ps  comb2pages  comp_doc  main-2p.ps  main.aux  main.bbl  main.blg  main.dvi  main.ps  main.tex  main.toc  qweaksim.bib  radiative_lookup_table.readme  readme  slashed.sty  temp
Extensions/: averageModelAnalysis.cc
GDML/: Load.C  qweak.gdml
analysis/: HitRatos.C  LoopOverEvents.C  SimLightWeightingAsymmetry.C  SimPreScatter_KE.C  SimQ2.C  SimVertexKE.C  SimVertexTheta.C  SimulationAnalPositionAndAngle.C  polarization.C
include/: Alinel_crsec_gen.h  G4UrbanMscModel96.hh  G4WentzelVIModel.hh  MSAnalyzingPowerData.hh  QweakSimAnalysis.hh  QweakSimAnalysisMessenger.hh  QweakSimBeamLine.hh  QweakSimBeamLineMessenger.hh  QweakSimCerenkovDetector.hh  QweakSimCerenkovDetectorMessenger.hh  QweakSimCerenkovDetector_PMTHit.hh  QweakSimCerenkovDetector_PMTSD.hh  QweakSimCerenkov_DetectorHit.hh  QweakSimCerenkov_DetectorSD.hh  QweakSimCollimator.hh  QweakSimCollimatorMessenger.hh  QweakSimCollimatorSupport.hh  QweakSimColorDefinitions.hh  QweakSimDetectorConstruction.hh  QweakSimDetectorMessenger.hh  QweakSimEPEvent.hh  QweakSimEPEventMessenger.hh  QweakSimEventAction.hh  QweakSimEventActionMessenger.hh  QweakSimFieldMap.hh  QweakSimGEM.hh  QweakSimGEMMessenger.hh  QweakSimGEM_WirePlaneHit.hh  QweakSimGEM_WirePlaneSD.hh  QweakSimGeometry.hh  QweakSimGeometryMessenger.hh  QweakSimHDC.hh  QweakSimHDCMessenger.hh  QweakSimHDC_WirePlaneHit.hh  QweakSimHDC_WirePlaneSD.hh  QweakSimHit.hh  QweakSimLeadGlass.hh  QweakSimLeadGlassMessenger.hh  QweakSimLeadGlass_DetectorHit.hh  QweakSimLeadGlass_DetectorSD.hh  (+101 more)
input/: Hit_Map_Tracks_13671_MD2_.txt  Hit_Map_Tracks_13671_MD6_.txt  Hit_Map_Tracks_13674_MD4_.txt  Hit_Map_Tracks_13674_MD8_.txt  Hit_Map_Tracks_13676_MD3_.txt  Hit_Map_Tracks_13676_MD7_.txt  Hit_Map_Tracks_13679_MD3_.txt  Hit_Map_Tracks_13679_MD7_.txt  Hit_Map_Tracks_13681_MD1_.txt  Hit_Map_Tracks_13681_MD5_.txt  Hit_Map_Tracks_15121_MD1_.txt  Hit_Map_Tracks_15121_MD5_.txt  MC_HitMap_Oct1.txt  MC_HitMap_Oct2.txt  MC_HitMap_Oct3.txt  MC_HitMap_Oct4.txt  MC_HitMap_Oct5.txt  MC_HitMap_Oct6.txt  MC_HitMap_Oct7.txt  MC_HitMap_Oct8.txt  MD1_trackingParametrization.txt  MD2_trackingParametrization.txt  MD3_trackingParametrization.txt  MD4_trackingParametrization.txt  MD5_trackingParametrization.txt  MD6_trackingParametrization.txt  MD7_trackingParametrization.txt  MD8_trackingParametrization.txt  idealBar_alongDir_acrossAng0_lightPara.txt  idealBar_alongDir_acrossAng23_1bevelBug.txt  idealBar_alongDir_acrossAng23_Bevel1mmRightBar05mmLeftBar.txt  idealBar_alongDir_acrossAng23_GlueFilm040.txt  idealBar_alongDir_acrossAng23_GlueFilmR040.txt  idealBar_alongDir_acrossAng23_Polish0977.txt  idealBar_alongDir_acrossAng23_PolishR005Decrease.txt  idealBar_alongDir_acrossAng23_PolishR010Decrease.txt  idealBar_alongDir_acrossAng23_RBevelEndcapCentralGlueSideOnly.txt  idealBar_alongDir_acrossAng23_RBevelEndcapPMTSideOnly.txt  idealBar_alongDir_acrossAng23_RBevelLongAxisOnly.txt  idealBar_alongDir_acrossAng23_RLG2mmThinner.txt  (+29 more)
jobs/: job.sh.in  job.xml.in
macros/: Al_TargetWindow_Dummy_Downstream.mac  Al_TargetWindow_Dummy_Upstream.mac  Background_Detectors_Run_2_LH2.mac  Elastic_Neutral_Run_2.mac  MD9.in  MD9_Run1.in  MD9_Run2.in  MagneticFieldScan.mac  Moller_Neutral_Run_2.mac  Normal_Target.mac  PMTOnlySignal.mac  md_dist.txt  my3passPionRun.mac  my3passRun.mac  myCheck.mac  myDownstream_TargetWindow_Run1.in  myDownstream_TargetWindow_Run2.in  myFarmPMTDD.mac  myGDML.mac  myLightWeightScan.in  myLightWeightScan_Al_DS.in  myLightWeightScan_Al_US.in  myLightWeightScan_IdealPos.in  myLightWeightScan_MagRot45deg.in  myLightWeightScan_MagRot45deg_noDC.in  myLightWeightScan_MagRot45deg_noDC_noMD9.in  myLightWeightScan_MagRot90deg.in  myLightWeightScan_MagRot90deg_noDC.in  myLightWeightScan_MagRot90deg_noDC_noMD9.in  myLightWeightScan_noDC.in  myLightWeightScan_noDC_noMD9.in  myLightWeightScan_noDC_noRaster.in  myLightWeightScan_noHDC.in  myLightWeightScan_noVDC.in  myLightWeight_Al_DS_Run1.in  myLightWeight_Al_DS_Run2.in  myLightWeight_Al_US_Run1.in  myLightWeight_Al_US_Run2.in  myLightWeight_Run2_noDC.in  myMD9RateStudy.mac  (+28 more)
rootScripts/: calcDDmeanForDist.C  calcDDmeanForDist_2D.C  calcPEasymFromDistr.C  cleanOutput.C  drawEffModelFctions.C  drawLRhistAsym.C  drawLight.C  getPEdata.C  mkPEasymGraphs.C  nQwTreePE_angVSe.C  nQwTreePE_xVSangVSe.C  nStripAngVSe.C  nStripEvsX.C  nTreeAsymPMT.C  nTreeAsymPMT_v2.C  nTreeAsymPMT_xPos.C  nTreeAsymPMT_xPosMD5.C  nTreeEnergyAsym.C  nTreeFirstInt.C  nTreeGetDistributions.C  nTreePE_xVSangVSe.C  nTupleAna.C  nTupleAngleAlongBar.C  nTupleXdeviation.C  nXcheckTupleTree.C  outAna.C  plotDistr.C  samplePrimaryDist.C  transverseModel.C
scripts/: MD9_submit.sh  cleanOutput.C  myDownstream_TargetWindow_Run1.sh  myDownstream_TargetWindow_Run2.sh  myLightWeight_Al_DS_submit.sh  myLightWeight_Al_US_submit.sh  myLightWeight_IdealPos_submit.sh  myLightWeight_MagRot45deg_submit.sh  myLightWeight_MagRot90deg_submit.sh  myLightWeight_Run1_submit.sh  myLightWeight_Run2_submit.sh  myLightWeight_submit.sh  myPosDirScan_submit.sh  myQtorScan_submit.sh  myUpstream_TargetWindow_Run1.sh  myUpstream_TargetWindow_Run2.sh  sampleMustache.py  submitJLabJob.py  submitJLabJob_EvsX.py  submitJLabJob_EvsXvsAng.py  submitJLabJob_lightPar.py  submitJLabJob_sample.py
src/: G4UrbanMscModel96.cc  G4WentzelVIModel.cc  QweakSimGEM.cc  (+117 more)
(+336 files in other folders)
